fix get mappings